# skill-space

./: .gitignore  CHANGELOG.md  README.md  config.example.toml  pyproject.toml
.devcontainer/maintainer/: Containerfile  devcontainer.json
.devcontainer/maintainer/scripts/: build.sh  post-create.sh  run.sh
.github/workflows/: ci.yml  publish.yml
src/skill_space/: __init__.py  cli.py  display.py  embedder.py  indexer.py  journal.py  matcher.py  predictor.py  store.py
tests/: test_cli.py  test_journal.py  test_matcher.py  test_predictor.py  test_skill_space.py  test_store.py
