[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-space"
version = "0.1.0"
description = "Fuzzy Tuple Space for Agent Skills — index, search, and predict across skill git repos"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "roebi", email = "roebi@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "gitpython>=3.1",
    "sentence-transformers>=3",
    "sqlite-vec>=0.1",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML>=6",
]

[project.scripts]
skill-space = "skill_space.cli:app"

[tool.hatch.envs.default]
installer = "uv"

[tool.mypy]
strict = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
