[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-tuple-space"
version = "0.3.0"
description = "Fuzzy Tuple Space for Agent Skills — index, search, and predict across skill git repos"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "roebi", email = "roebi@users.noreply.github.com" }]
requires-python = ">=3.13"

dependencies = [
  "typer>=0.12",
  "rich>=13",
  "gitpython>=3.1",
  "sqlite-vec>=0.1,<1.0",  # pre-1.0 — cap until stable API
  "pyyaml>=6",
]

[project.urls]
Homepage   = "https://github.com/roebi/skill-space"
Repository = "https://github.com/roebi/skill-space"
Issues     = "https://github.com/roebi/skill-space/issues"

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=3,<6",  # sentence-transformers 5.3.0 confirmed clean
]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "ruff>=0.4",
  "types-PyYAML>=6",
  "pip-audit>=2",  # supply chain audit in dev/CI
]

[project.scripts]
skill-space = "skill_space.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_space"]

[tool.hatch.envs.default]
installer = "uv"

[tool.mypy]
strict             = false
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
